[tool.poetry]
name = "isbn4groups"
version = "0.1.0"
description = ""
authors = ["Shinya Uryu <suika1127@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pins = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
